# x

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  x.pc.in  xConfig.cmake.in  xUninstall.cmake.in
include/x/common/: eigen_matrix_base_plugin.h  types.h
include/x/ekf/: ekf.h  propagator.h  state.h  state_buffer.h  updater.h
include/x/vio/: msckf_slam_update.h  msckf_update.h  range_update.h  slam_update.h  solar_update.h  state_manager.h  tools.h  track_manager.h  types.h  update.h  vio.h  vio_updater.h
include/x/vision/: camera.h  feature.h  tiled_image.h  timing.h  track.h  tracker.h  triangulation.h  types.h
src/x/ekf/: ekf.cpp  propagator.cpp  state.cpp  state_buffer.cpp  updater.cpp
src/x/vio/: msckf_slam_update.cpp  msckf_update.cpp  range_update.cpp  slam_update.cpp  solar_update.cpp  state_manager.cpp  track_manager.cpp  vio.cpp  vio_updater.cpp
src/x/vision/: camera.cpp  feature.cpp  tiled_image.cpp  timing.cpp  tracker.cpp  triangulation.cpp
