<package>
  <name>x</name>
  <version>1.0.0</version>
  <description>Generic C++ library for vision-based navigation, with
	multi-sensor fusion capabilities for thermal, range, solar and GPS
	measurements.</description>
  <maintainer email="jeff.h.delaune@jpl.nasa.gov">Jeff Delaune</maintainer>
  
  <license>California Institute of Technology</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>

</package>
